--- a/index.html
+++ b/index.html
@@ -1,37 +1,43 @@
-## Welcome to GitHub Pages
+<!DOCTYPE html>
 
-You can use the [editor on GitHub](https://github.com/hitengupta14/module2_sol/edit/master/index.md) to maintain and preview the content for your website in Markdown files.
+<html>
 
-Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
+<head>
 
-### Markdown
+	<meta charset="utf-8">
 
-Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-```markdown
-Syntax highlighted code block
 
-# Header 1
-## Header 2
-### Header 3
 
-- Bulleted
-- List
+	<title>menucard.html</title>
 
-1. Numbered
-2. List
+	<link rel="stylesheet" type="text/css" href=https://github.com/hitengupta14/module2_sol/blob/master/cssstyles.html
 
-**Bold** and _Italic_ and `Code` text
+</head>
 
-[Link](url) and ![Image](src)
-```
+<body>
 
-For more details see [GitHub Flavored Markdown](https://guides.github.com/features/mastering-markdown/).
+	<h1> Our Menu </h1>
 
-### Jekyll Themes
+	<nav class="row">
 
-Your Pages site will use the layout and styles from the Jekyll theme you have selected in your [repository settings](https://github.com/hitengupta14/module2_sol/settings). The name of this theme is saved in the Jekyll `_config.yml` configuration file.
+		<div class="col-md-4 col-sm-6 col-xs-12">> <h2>Chicken</h2> <p id="p1"> "lorem ipsum dolor sit amet,consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident,sunt in culpa qui officia deserunt mollit anim id est laborum."</p> </div>
 
-### Support or Contact
 
-Having trouble with Pages? Check out our [documentation](https://help.github.com/categories/github-pages-basics/) or [contact support](https://github.com/contact) and we’ll help you sort it out.
+
+		<div class="col-md-4 col-sm-6 col-xs-12">> <h2>Beef</h2> <p id="p2">"lorem ipsum dolor sit amet,consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident,sunt in culpa qui officia deserunt mollit anim id est laborum."</p></div>
+
+
+
+		<div  id="hy" class="col-md-4 col-sm-12 col-xs-12"><h2>Sushi</h2> <p id="p3">"lorem ipsum dolor sit amet,consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident,sunt in culpa qui officia deserunt mollit anim id est laborum."</p> </div>
+
+
+
+	</nav>
+
+
+
+</body>
+
+</html>
