--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 	<title>menucard.html</title>
-	<link rel="stylesheet" type="text/css" href=https://raw.githubusercontent.com/hitengupta14/module2_sol/master/css.css
+	<link rel="stylesheet" type="text/css" href=https://raw.githubusercontent.com/hitengupta14/module2_sol/master/css.css">
 </head>
 <body>
 	<h1> Our Menu </h1>
